force-app/main/default/objects/Analysis_PMT__c/Analysis_PMT__c.object-meta.xml
<CustomObject>
    <label>Analysis</label>
    <nameField>
        <displayFormat>AN-{000000}</displayFormat>
        <label>Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analysises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>