force-app/main/default/objects/Analysis_PMT__c/fields/Assigned_to_PMT__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Analysises</relationshipName>
    <type>Lookup</type>
</CustomField>