force-app/main/default/objects/Analysis_PMT__c/fields/Change_Request_PMT__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_PMT__c</fullName>
    <label>Change Request</label>
    <referenceTo>Change_Request_PMT__c</referenceTo>
    <relationshipLabel>Analysis</relationshipLabel>
    <relationshipName>Analysis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>