force-app/main/default/objects/Analysis_PMT__c/fields/Completion_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_PMT__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>