force-app/main/default/objects/Analysis_PMT__c/fields/Reviewed_By_PMT__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>