force-app/main/default/objects/Analysis_PMT__c/fields/Reviewed_Comments_PMT__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Comments_PMT__c</fullName>
    <label>Reviewed Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>