force-app/main/default/objects/Analysis_PMT__c/fields/Reviewed_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date_PMT__c</fullName>
    <label>Reviewed Date</label>
    <type>Date</type>
</CustomField>