force-app/main/default/objects/Analysis_PMT__c/recordTypes/Detail_Analysis_PMT.recordType-meta.xml
<RecordType>
    <fullName>Detail_Analysis_PMT</fullName>
    <active>true</active>
    <label>Detail Analysis</label>
</RecordType>