force-app/main/default/objects/Analysis_PMT__c/recordTypes/Impact_Analysis_PMT.recordType-meta.xml
<RecordType>
    <fullName>Impact_Analysis_PMT</fullName>
    <active>true</active>
    <label>Impact Analysis</label>
</RecordType>